--- a/styles.css
+++ b/styles.css
@@ -337,10 +337,6 @@ section {
     flex-direction: column;
 }
 
-.shirt-project-container {
-    max-width: 35%;
-}
-
 .article-container {
     display: flex;
     text-align: initial;
